<resources>
    <string name="app_name">local</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_friends">加入好友</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="error_phone_invalid">請輸入正確的手機號碼</string>
    <string name="countdown_resend">重新發送驗證碼(%d秒)</string>
    <string name="error_invalid_phone_number">手機格式錯誤</string>
    <string name="error_phone_existed">手機號碼已被註冊!</string>
    <string name="error_unknown_error">錯誤!請檢查網路連線</string>
    <string name="error_phone_not_register">該手機號碼尚未註冊!</string>
    <string name="error_login_failed">登入失敗!</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="sex_unknown">不願透漏</string>
    <string name="home_second">Home Second</string>
    <string name="hint_cellphone_number">手機號碼</string>
    <string name="login_forget_pwd">忘記密碼</string>
    <string name="login_remember_me">記住我</string>
    <string name="login_submit">登入</string>
    <string name="login_register">註冊</string>
    <string name="send_code">送出驗證碼</string>
    <string name="hint_name">姓名</string>
    <string name="sms_code">驗證碼</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="sex">性別</string>
    <string name="please_enter_code">請輸入驗證碼</string>
    <string name="send">送出</string>
    <string name="age">年紀</string>
    <string name="sport_freq">運動頻率</string>
    <string name="add_friends">加入好友</string>
    <string name="friends_list">好友列表</string>
    <string name="please_enter_friends_phone">請輸入對方的手機號碼</string>
    <string name="or">或</string>
    <string name="add">加入</string>
    <string name="my_qrcode">我的條碼</string>
    <string name="distance">距離: %.2f 公里</string>
    <string name="points">點數: %d 點</string>
    <string name="logout">登出</string>
    <string name="username">使用者名稱</string>
    <string name="default_avatar">預設頭像</string>
    <string name="profile_info_tab">個人資訊</string>
    <string name="save">儲存</string>
    <string name="edit_avatar">上傳照片</string>
    <string name="upload_image_or_video">選取圖片</string>
    <string name="take_pic_or_record">拍攝照片</string>
    <string name="exit">離開</string>
    <string name="permission_title">請允許權限</string>
    <string name="permission_description1">為了程式能夠正常運作，請允許活動偵測權限</string>
    <string name="permission_description2"><![CDATA[請至設定>APP 打開權限，或是按下方允許按鈕]]></string>
    <string name="permission_ok">允許</string>
    <string name="toady_activity">今日活動</string>
    <string name="move_distance">移動距離</string>
    <string name="km">公里</string>
    <string name="meters">公尺</string>
    <string name="dot">點</string>
    <string name="days_point">今日累計</string>
    <string name="accumulation_points">今日已累計\n%d 點</string>
    <string name="date_format">%d/%s/%s</string>
    <string name="date_format_year_month">%d年/%s月</string>
    <string name="accumulation_points_title">累積點數</string>
    <string name="friends_list_title">好友選單</string>
    <string name="public_map_title">公共區域</string>
    <string name="store_transactionRecord_userExchangeItem">兌換商品\n%s</string>
    <string name="error_addFriend_input_self_phone">請勿輸入自己的手機號碼!</string>
    <string name="view_pager_title_home_today_statics">當日\n數據</string>
    <string name="viewpager_title_distance_details_statics">距離\n總覽</string>
    <string name="viewpager_title_points_details_statics">點數\n總覽</string>
    <string name="viewpager_title_exchange_item">優惠券\n兌換</string>
    <string name="viewpager_title_exchange_record">兌換\n紀錄</string>
    <string name="drawer_statics_title">數據查詢</string>
    <string name="store_login">商家登入</string>
    <string name="store_account">帳號</string>
    <string name="store_password">密碼</string>
    <string name="transation_notice_rule_title">優惠券使用注意事項</string>
    <string name="transaction_exchange">兌換</string>
    <string name="transactionSuc_confirm">請由商家按下此確認按鈕</string>
    <string name="transactionSuc_rules">請注意!\n同筆消費只能使用一次優惠券</string>
    <string name="transactionSuc_countDown_format">0%d:%d</string>
    <string name="transaction_record_description">兌換物品: %s</string>
    <string name="transaction_record_storeName">兌換商家: %s</string>
    <string name="transaction_record_date">兌換日期:%s年%s月 %s</string>
    <string name="transaction_record_left_points">當時剩餘點數\n%d</string>
    <string name="needPoints">%d 點</string>
    <string name="admin_userList_left_points">剩餘點數\n%d</string>
    <string name="edit">編輯</string>
    <string name="store_register_title">商家註冊</string>
    <string name="et_store_name_hint">商家名稱</string>
    <string name="register">註冊</string>
    <string name="email">信箱</string>
    <string name="pwd">密碼</string>
    <string name="plus_sign">+</string>
    <string name="click_here_to_upload_img">點擊此處上傳/選取\n優惠券照片</string>
    <string name="coupon_name">優惠券名稱</string>
    <string name="need_points">所需點數</string>
    <string name="delete">刪除</string>
    <string name="scan_qr_code">掃描QR Code</string>
</resources>
