<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.local.local.screen.fragment.ui.home.HomeFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.local.local.screen.fragment.ui.firends.FriendFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_nav_friends_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_friends_to_addFriendFragment"
            app:destination="@id/addFriendFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/nav_friends" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.local.local.screen.fragment.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/addFriendFragment"
        android:name="com.local.local.screen.fragment.ui.firends.AddFriendFragment"
        android:label="AddFriendFragment" />
</navigation>