<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/viewGroup_storeLogin_account"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/colorGreen"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_storeLogin_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/store_account" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/viewGroup_storeLogin_pwd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/colorGreen"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewGroup_storeLogin_account"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_storeLogin_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/store_password"
            android:singleLine="true"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/btn_storeLogin_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:background="@color/colorGreen"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_storeLogin_confrim"
        app:layout_constraintEnd_toStartOf="@+id/btn_storeLogin_confrim"
        app:layout_constraintTop_toTopOf="@+id/btn_storeLogin_confrim"
        app:layout_constraintVertical_bias="0.0" />

    <android.widget.Button
        android:id="@+id/btn_storeLogin_confrim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/colorGreen"
        android:text="@string/login_submit"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/viewGroup_storeLogin_pwd"
        app:layout_constraintTop_toBottomOf="@+id/viewGroup_storeLogin_pwd" />

    <android.widget.Button
        android:id="@+id/btn_storeLogin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorGreen"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewGroup_storeLogin_pwd"
        app:layout_constraintTop_toBottomOf="@+id/viewGroup_storeLogin_pwd" />
</androidx.constraintlayout.widget.ConstraintLayout>